--- a/package.json
+++ b/package.json
@@ -7,5 +7,7 @@
     "url": "git@github.com:vskids/lacquergame.com.git"
   },
   "private": true,
-  "devDependencies": {}
+  "devDependencies": {
+    "gulp": "^3.8.8"
+  }
 }
