--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "private": true,
   "devDependencies": {
     "gulp": "^3.8.8",
-    "gulp-help": "^1.2.0"
+    "gulp-help": "^1.2.0",
+    "gulp-less": "^1.3.6"
   }
 }
