--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "devDependencies": {
     "gulp": "^3.8.8",
     "gulp-help": "^1.2.0",
-    "gulp-less": "^1.3.6"
+    "gulp-less": "^1.3.6",
+    "gulp-sourcemaps": "^1.2.4"
   }
 }
