--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "gulp": "^3.8.8",
     "gulp-help": "^1.2.0",
     "gulp-less": "^1.3.6",
-    "gulp-sourcemaps": "^1.2.4"
+    "gulp-sourcemaps": "^1.2.4",
+    "gulp-watch": "^1.1.0"
   }
 }
