--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "gulp-notify": "^2.0.0",
     "gulp-plumber": "^0.6.6",
     "gulp-sourcemaps": "^1.2.4",
-    "gulp-watch": "^1.1.0"
+    "gulp-watch": "^1.1.0",
+    "lodash": "^2.4.1"
   }
 }
