Skrollr + Emummy gfx = Parallaxing stars
• Installed `skrollr`, `skrollr-stylesheets`, and `skrollr-ie` with bower.
	» Each now in the bower_components/ dir.
	• Each, at their current versions, added to bower.json's dependencies.
	• Set up index.html for Skrollr:
		◦ Added `<script src…>`es for `skrollr.stylesheets.min.js`,  `skrollr.min.js`, and (conditional-comment wrapped)  `skrollr.ie.min.js`.
		◦ Added skrollr init JS after includes with a sole `edgeStrategy: 'ease'` option.
		◦ Added `data-skrollr-stylesheet` attribute to `styles.css` <link>.
• Each of the `#starfield*` <div>s now has an inner class `back image` <div> so that the `background` CSS property (inner) can ease separately from the `opacity` CSS property (outer).
	• Moved background-image and background-repeat CSS into `.image` descendent selectors.
	• Changed `.phase > .back` CSS to also apply to `.phase > .back .back`.
	• Added `fixed` to the background CSS— moving relative to screen-stationary looks more convincing.
• Added opacity animations to each of the `#starfield*` elements and background-position animations to eacb of the `#starfield* > .image`s.
	» Smaller stars start visible, with larger stars coming in towards the end.
	» Since the parallaxing can give away the star layers, made the large star graphics (2 and 3) move close in speed to each other.
	• Made a simple `-skrollr-dry-animation(…, { … })` mixin to create both the `-skrollr-animation-name: …;` and `@-skrollr-keyframes … { … }` CSS in one go, with the same animation name.
		» “Don't Repeat Yourself”.
• Fix: `!important` on html/body's `height: 100%`.
	» Skrollr weirdly adds an explicit pixel height to the <body> tag's style attribute, which messes up our positioning.

Also:
• Changed the sky-phase gradient to go from cobalt-darker to blue-darker rather the reverse.
	» With the stars appearing it looks better to have it transition darker, like night fall.

--- a/bower.json
+++ b/bower.json
@@ -16,6 +16,9 @@
     "tests"
   ],
   "dependencies": {
-    "bootstrap": "~3.2.0"
+    "bootstrap": "~3.2.0",
+    "skrollr": "~0.6.27",
+    "skrollr-stylesheets": "~0.0.6",
+    "skrollr-ie": "~1.0.3"
   }
 }
