--- a/bower.json
+++ b/bower.json
@@ -19,6 +19,7 @@
     "bootstrap": "~3.2.0",
     "skrollr": "~0.6.27",
     "skrollr-stylesheets": "~0.0.6",
-    "skrollr-ie": "~1.0.3"
+    "skrollr-ie": "~1.0.3",
+	"viewport-units-buggyfill", "~0.4.1"
   }
 }
