Minor: Better generated file attributes
• Better generated file attributes, according to: http://blog.andrewray.me/dealing-with-compiled-files-in-git/

--- a/.gitattributes
+++ b/.gitattributes
@@ -1,4 +1,4 @@
 # Auto-Generated Files
 # 	Intended only to be staged as a whole, and to never conflict (ideally, newer should always win over older).
-/css/*.css binary merge=ours
-/css/*.css.map binary merge=ours
+/css/*.css -diff merge=ours
+/css/*.css.map -diff merge=ours
